--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "typescript": "^4.6.4",
     "vite": "^3.2.0",
     "vite-plugin-electron": "^0.10.2",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^1.0.9"
   }
 }
